Install jekyll-deploy-shosetsu

--- a/_posts/2018-08-09-02-帰り道.md
+++ b/_posts/2018-08-09-02-帰り道.md
@@ -1,6 +1,8 @@
 ---
 title: 二　帰り道
 date: 2018-08-09 02:00:00 +0900
+kakuyomu:
+  url: https://kakuyomu.jp/works/1177354054887430692/episodes/1177354054887430809
 ---
 
 「――その後はどうなった？」幼なじみのミノルがいった。入学式が終わったあとの帰り道、駅のホームでベンチに腰かけて電車を待っているときだった。
