--- a/_posts/2018-08-09-04-VRお見舞い.md
+++ b/_posts/2018-08-09-04-VRお見舞い.md
@@ -1,6 +1,8 @@
 ---
 title: 四　ＶＲお見舞い
 date: 2018-08-09 04:00:00 +0900
+kakuyomu:
+  url: https://kakuyomu.jp/works/1177354054887430692/episodes/1177354054887430839
 ---
 
 　次の日、ぼくは熱を出して学校を休んだ。そして、その次の日にはさらに悪化して、結局いつものように入院することになった。
@@ -38,7 +40,6 @@ date: 2018-08-09 04:00:00 +0900
 
 「ミノルはさ、自分の体を変えたいと思ったことある？」
 
-<!-- FIXME: 順番変える -->
 　それは、高熱でうなされている時に頭をよぎったことだった。ケイのいうように、心と体が密接に関わっているなら、体の性と心の性が異なるミノルはどうなのだろう。幼い頃は、ミノルも女の子らしい格好をさせられることがあった。そんな時、彼はきまって弱々しく黙り込んでしまった。彼の親の話によると、その格好になるまでは暴れまわって徹底的に抵抗していたらしい。化粧や筋トレがそうだというなら、服だって体の延長なのだ。それは心に影響する。そう考えたとき、ある疑問が頭を離れなくなった。もしかするとミノルも――服だけでなく――体を変えたいとずっと悩んでいたのではないだろうか。そう思うと、長年一緒に過ごしてきたのに、ミノルのことを何も知らない気がした。
 
 　ミノルが、ふーっと息を吐く音が聞こえた。そしていつもの調子で続けた。
