--- a/_posts/2018-08-09-00-プロローグ.md
+++ b/_posts/2018-08-09-00-プロローグ.md
@@ -1,6 +1,8 @@
 ---
 title: プロローグ
 date: 2018-08-09 00:00:00 +0900
+kakuyomu:
+  url: https://kakuyomu.jp/works/1177354054887430692/episodes/1177354054887430721
 ---
 
 　今のぼくがあるのは、ケイとの出会いがあったからだ。もう十年以上が経つけれど、初めて彼女を見た入学式の日のことは鮮明に覚えている。あれは、二〇三二年のことだった。
