--- a/_posts/2018-08-09-01-ケイ.md
+++ b/_posts/2018-08-09-01-ケイ.md
@@ -1,6 +1,8 @@
 ---
 title: 一　ケイ
 date: 2018-08-09 01:00:00 +0900
+kakuyomu:
+  url: https://kakuyomu.jp/works/1177354054887430692/episodes/1177354054887430728
 ---
 
 　教室では、どこの中学出身だとか、何の部活に興味があるといった、あたりさわりない会話があちこちで繰り広げられていた。初対面の相手にわるく思われないよう、あるいは、少しでもよく見られようと、どの会話もなんとなくぎこちない。そんな中、ぼくはまだ誰とも話さず、一人そわそわと教室を見まわしていた。
@@ -21,7 +23,6 @@ date: 2018-08-09 01:00:00 +0900
 
 　きっと、彼女はサイボーグだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二一年に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突然現れ、脳科学や神経科学といった分野を中心に、人間の身体に関する理解が大きく進展した。そして、ソフトウェアやハードウェアの技術発展とあいまって、サイボーグが現実のものとなったのだ。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
 
-<!-- FIXME: 「いや、…」や「どんなに精巧な人形も…」をなんとかする -->
 　しかし、彼女ほど体の多くをサイボーグ化している人は見たことがない。ドアを閉める動きから、両手両足が義肢であることがわかる。服の内側はわからないが、顔も造りものだった。いや、遠目にはほとんどわからない。それでも、どんなに精巧な人形の顔も人間のものでないと分かるのと同じように、彼女の顔が自然のものでないことがわかる。その瞳や表情には、なにか生気のようなものが感じられなかった。
 
 　彼女はドアを閉めると、ぼくらの方を振り返った。ぼくは、さっと目をそらした。彼女が全身サイボーグであるなら、それは重度の身体障がい者であることを意味する。何か重い事故や病気ために、サイボーグにならざるをえなかったのだろう。そう思ったとき、じろじろと見つめていたことが、なんだか気まずく思えたのだ。他のクラスメイトも同じなのだろう。多くがさっきまでの会話の続きに戻っていた。
