--- a/_posts/2018-08-09-05-病室にて.md
+++ b/_posts/2018-08-09-05-病室にて.md
@@ -1,6 +1,8 @@
 ---
 title: 五　病室にて
 date: 2018-08-09 05:00:00 +0900
+kakuyomu:
+  url: https://kakuyomu.jp/works/1177354054887430692/episodes/1177354054887430842
 ---
 
 　次の日、ぼくは病室でミノルからの連絡を待っていた。あの後も事件について話したが、結局まだ情報が少なすぎるという結論になった。そして、ミノルが学校で情報を集めて報告するということでお開きになったのだ。だから、僕は放課後になるまで暇だった。
