Introduce textlint-rule-preset-fuji

--- a/_posts/2018-08-09-02-帰り道.md
+++ b/_posts/2018-08-09-02-帰り道.md
@@ -12,7 +12,7 @@ narou:
 
 　校門で待ち合わせてからここまで、今朝教室で起きたことを話していた。サイボーグの生徒が不良の生徒をやり込めた話は、あっという間に噂になっていて、会うなりミノルがその話を聞きたがったのだ。
 
-「そっか。殴り合いのけんかとかにならなくてよかったな。相手の生徒、けっこう柄悪かったんだろ」それまで前のめりぎみに聞いていたミノルが、ベンチにもたれかかりながらいった。心配しているかのような言いぶりだけれど、本心では殴り合いになった方が面白かったのに、なんて思っているに違いない。
+「そっか。殴り合いのけんかとかにならなくてよかったな。相手の生徒、けっこう柄悪かったんだろ」それまで前のめりぎみに聞いていたミノルが、ベンチにもたれかかりながらいった。心配しているかのような言いぶりだけれど、本心では殴り合いになったほうが面白かったのに、なんて思っているに違いない。
 「やっぱり、サイボーグはけんかも強いのかな」ふと思いついたように、ミノルが続けた。
 「たぶん、弱いと思うよ。椅子に座るだけでもかなり大変そうだったし、あまり機敏な動きはできないんじゃないかな……」教室での様子を思い出して、ぼくはいった。
 「サイボーグっていっても、そんなもんかあ……」ミノルが伸びをしながらいう。少し間をあけて、ぼくの方を横目で見ながらきく。
@@ -29,7 +29,7 @@ narou:
 
 「病気になるのもいやだけど、{現代|いま}のレベルのサイボーグとなると、それはそれで大変そうだな……」
 
-　そう言いながら、ぼくはケイのことを思い浮かべる。彼女にとっては、椅子に座ることも、階段を上り下りすることも、人と会話することも、実はとても大変なことのはずだ。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取れなかったけれど、かなり無理をしていたに違いない。にもかかわらず、ちょっかいをかけてきた生徒を撃退するなんてことをやってのけたのだ。改めて、すごいな、と思った。サイボーグになれば、あんなふうに強くなれるのだろうか。
+　そう言いながら、ぼくはケイのことを思い浮かべる。彼女にとっては、椅子に座ることも、階段を上り下りすることも、人と会話することも、実はとても大変なことのはずだ。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取れなかったけれど、かなり無理をしていたに違いない。にもかかわらず、ちょっかいをかけてきた生徒を撃退するなんてことをやってのけたのだ。あらためて、すごいな、と思った。サイボーグになれば、あんなふうに強くなれるのだろうか。
 
 「でも、彼女のように強くなれるなら、考えてもいいかもしれない」思っていたことがつい口に出て、すぐにしまった、と思う。横でミノルが声を上げて笑っていた。
 「それは、サイボーグと関係ないだろ」
