--- a/_posts/2018-08-09-03-体育見学.md
+++ b/_posts/2018-08-09-03-体育見学.md
@@ -90,9 +90,9 @@ narou:
 
 　ぼくがそう言うと、彼女がかぶりを振りながら、さえぎるようにいった。
 
-「それは違う。心の問題と体の問題は、そんな簡単に切り分けられるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない」
+「それは違う。心の問題と体の問題は、そんな簡単に切り分けられるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換するときは、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない」
 
-　ぼくは、あらためて彼女の体を見た。はじめてみた時、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女がさらに言葉を続けた。
+　ぼくは、あらためて彼女の体を見た。はじめてみたとき、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女がさらに言葉を続けた。
 
 「体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレによる肉体改造なんかもそう。自分に自信をもつため――心を強くするため――に、そういったことをしている人は少なくない」
 
