--- a/_posts/2018-08-09-04-VRお見舞い.md
+++ b/_posts/2018-08-09-04-VRお見舞い.md
@@ -29,7 +29,7 @@ narou:
 
 　それからは、普段一緒に登校するときと同じように、学校であったことや、最近見たビデオ、ハマってるゲームの話なんかをした。ＶＲチャットの便利な点は、視覚情報をその場で楽に共有できることだ。現実だとモバイルデバイスの小さいディスプレイを一緒にのぞくことになるが、ここでは好きなサイズの画面を空間の任意の場所に広げることができる。
 
-　一通りのことを話し終えて、次の話題を探すための間が生まれた。ぼくは、聞こうと思っていた質問をすることを考える。でも、どうやってその話を切り出せばいいかわからなかった。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれなかった。いつもなら何も考えずに話せるのに、言葉が頭の中で渦を巻いて形にならない。現実世界でぼくはつばを飲み込む。ハンドコントローラの手汗が気持ち悪さが無性に気になった。
+　一通りのことを話し終えて、次の話題を探すための間が生まれた。ぼくは、聞こうと思っていた質問をすることを考える。でも、どうやってその話を切り出せばいいかわからなかった。それは、僕が普段避けている話題だったし、下手に話せばミノルを傷つけることになるかもしれなかった。いつもなら何も考えずに話せるのに、言葉が頭の中で渦を巻いて形にならない。現実世界でぼくはつばを飲み込む。ハンドコントローラの手汗が気持ち悪さが無性に気になった。
 
 「……まだ調子悪い？」ミノルのアバターが首をかしげる。アバターは、声の調子に合わせて、自動で動きをつける。プリセットから動作を選んで、意図的に動かすこともできた。
 「いや、そんなことないよ。どうして？」現実世界の様子を見抜かれて驚いたぼくは、反射的に否定した。元気に聞こえるように努めたけれど、かえってわざとらしかったかもしれない。
@@ -42,7 +42,7 @@ narou:
 
 「ミノルはさ、自分の体を変えたいと思ったことある？」
 
-　それは、高熱でうなされている時に頭をよぎったことだった。ケイのいうように、心と体が密接に関わっているなら、体の性と心の性が異なるミノルはどうなのだろう。幼い頃は、ミノルも女の子らしい格好をさせられることがあった。そんな時、彼はきまって弱々しく黙り込んでしまった。彼の親の話によると、その格好になるまでは暴れまわって徹底的に抵抗していたらしい。化粧や筋トレがそうだというなら、服だって体の延長なのだ。それは心に影響する。そう考えたとき、ある疑問が頭を離れなくなった。もしかするとミノルも――服だけでなく――体を変えたいとずっと悩んでいたのではないだろうか。そう思うと、長年一緒に過ごしてきたのに、ミノルのことを何も知らない気がした。
+　それは、高熱でうなされているときに頭をよぎったことだった。ケイのいうように、心と体が密接に関わっているなら、体の性と心の性が異なるミノルはどうなのだろう。幼い頃は、ミノルも女の子らしい格好をさせられることがあった。そんな時、彼はきまって弱々しく黙り込んでしまった。彼の親の話によると、その格好になるまでは暴れまわって徹底的に抵抗していたらしい。化粧や筋トレがそうだというなら、服だって体の延長なのだ。それは心に影響する。そう考えたとき、ある疑問が頭を離れなくなった。もしかするとミノルも――服だけでなく――体を変えたいとずっと悩んでいたのではないだろうか。そう思うと、長年一緒に過ごしてきたのに、ミノルのことを何も知らない気がした。
 
 　ミノルが、ふーっと息を吐く音が聞こえた。そしていつもの調子で続けた。
 
@@ -54,7 +54,7 @@ narou:
 
 「そういえば、ぼくも小さい頃、大きくなれば体が良くなると思ってた……」似た経験を思い出して、ぼくがいった。
 
-「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいた時ほど、自分の体が嫌だったことはない。それで――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。――体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
+「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいたときほど、自分の体が嫌だったことはない。それで――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。――体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
 
 　ミノルはあっさりとそう言ったけれど、その内容はぼくにとってショックだった。ミノルがそんな悩みを持っていたことも、そんな治療をしていたことも、何も気づいていなかった。本当にミノルのことを何も知らなかったのだ。たしかに、ミノルの体は、同年代の女性に比べれば、胸も出ていないし体の丸みもない。ただ、ミノルが男であることがあまりに当たり前で、体が女性であることは知ってはいても、そういうものかと思っていた。ちょっと考えればそんなはずないのに、今まで思いもよらなかった。
 「知らなかった……」ぼくは、言葉を絞り出した。
@@ -76,7 +76,7 @@ narou:
 
 「――でも、どうして急にそんなこと聞こうと思ったの？」ミノルが沈黙をやぶる。その声は、もう震えていなかった。ぼくも切り替えるように努める。
 
-「ケイに言われたことがきっかけだったんだ……」ぼくはそういって、体育見学をしている時に彼女と話したことをミノルに伝えた。
+「ケイに言われたことがきっかけだったんだ……」ぼくはそういって、体育見学をしているときに彼女と話したことをミノルに伝えた。
 
 　ぼくが話し終えると、ミノルが迷ったようすでいった。
 「伝聞の伝聞みたいな話だから、今日はやめておこうと思ったんだけど……」
