--- a/_posts/2018-08-09-05-病室にて.md
+++ b/_posts/2018-08-09-05-病室にて.md
@@ -15,7 +15,7 @@ narou:
 
 　ケイの体は、可能な限り人間に近いパーツで構成されている。その点は、セクサロイドも同じであり、もしかすると同一のパーツが使われているかもしれない。そうだとすると、ケイが体を人間らしくすることは、同時にセクサロイドの体に近づくことも意味する。きっと、ケイ自身もそのことを気にしていて、それをタツオに指摘されたがために、腕をつかむくらいに怒ったのだ……。
 
-　そんなことをぼんやり考えていると、現実世界の方で何か音がするのを感じた。ぼくは、ゲームを止めてヘッドセットを外す。すると、ベッドを囲むカーテンに人影がうつっていた。カーテンの向こうから声がする。病室にて
+　そんなことをぼんやり考えていると、現実世界の方で何か音がするのを感じた。ぼくは、ゲームを止めてヘッドセットを外す。すると、ベッドを囲むカーテンに人影がうつっていた。カーテンの向こうから声がする。
 
 「開けてもいい？」聞き間違えるはずがない。ケイの合成音声の声だ。
 
