Fix textlint errors

--- a/src/03-体育見学.md
+++ b/src/03-体育見学.md
@@ -41,7 +41,7 @@
 「それじゃ今は、サイボーグになりたいとは思わない？」
 
 　こないだのミノルの質問と同じだった。ただ、あの時みたいに「きみのように強くなれるなら」なんて言えるはずもなく、ぼくは言葉をにごした。
-「どうだろう……」そう言って彼女の方を見る。彼女は、立ったまま座るつもりがないようだった。考えてみれば、地面に座るというのは椅子に座るより難易度が高そうだ。彼女は、ぼくの方を見すえて、次の言葉を待っている。
+「どうだろう……」そう言って彼女の方を見る。彼女は、立ったまま座るつもりがないようだった。考えてみれば、地面に座るというのは椅子に座るより難易度が高そうだ。ぼくの方を見すえて、次の言葉を待っている。
 
 　ぼくは、また目をそらす。ざっとあたりを見回したけれど、僕とケイが話していることに気づいている人はいなさそうだった。ケイが別の誰かにここでのことを話すこともないだろう。ぼくは意を決して、気になっていたことをそのまま聞くことにした。
 「きみは、サイボーグだからそんなに強いの？」ぼくは、目をそらしたままそういった。
