--- a/src/05-病室にて.md
+++ b/src/05-病室にて.md
@@ -4,7 +4,7 @@
 
 　昼下がり、時間をつぶすためにベッドでＶＲゲームをしていたが、あまり集中できず、いつのまにかまた事件の事を考えていた。
 
-　タツオがいったという「セクサロイド」という言葉は、ケイを侮辱するために使われたに違いない。セクサロイドは、人間との性行為を目的に作られたロボットの総称だ。ロボットの普及とともに、セクサロイドを売りにした風俗店も一気に広まった。ふつう、人型のロボットは、ひと目でロボットと分かるような見た目をしている。人間らしい見た目が必要になることはまずないし、まぎらわしいだけだからだ。しかし、セクサロイドはそうではない。セクサロイドには、人間らしい見た目や触感が求められる。そのため――皮肉なことに――セクサロイドが最も人間に近いロボットといわれていた。
+　タツオがいったという「セクサロイド」という言葉は、ケイを侮辱するために使われたに違いない。セクサロイドは、人間との性行為を目的に作られたロボットの総称だ。ロボットの普及とともに、セクサロイドを売りにした風俗店も一気に広まった。ふつう、人型のロボットは、ひと目でロボットと分かるような見た目をしている。人間らしい見た目が必要になることはまずないし、まぎらわしいだけだからだ。しかし、セクサロイドはそうではない。セクサロイドには、人間らしい見た目や触感が求められる。そのため――皮肉なことに――セクサロイドがもっとも人間に近いロボットといわれていた。
 
 　ケイの体は、可能な限り人間に近いパーツで構成されている。その点は、セクサロイドも同じであり、もしかすると同一のパーツが使われているかもしれない。そうだとすると、ケイが体を人間らしくすることは、同時にセクサロイドの体に近づくことも意味する。きっと、ケイ自身もそのことを気にしていて、それをタツオに指摘されたがために、腕をつかむくらいに怒ったのだ……。
 
